# hardware-info

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  HardwareInfo.cpp  HardwareInfo.h  HardwareInfo_p.h  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
cmake/: HardwareInfoConfig.cmake.in
tests/: HardwareInfoTests.cpp
